# splemgen

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/splemgen/: cli.py  config.py  models.py  query_builder.py
